09/06/2008 David Teller <David.Teller@univ-orleans.fr>:
	* test/: created
	* syntax/test: moved to test/syntax
	* odoc_generator_batlib.ml: [#generate_index] now sets left frame to "root_modules.html"
	* odoc_generator_batlib.ml: [merge_info_opt] created
	* odoc_generator_batlib.ml: [rebuild_structure] now uses [merge_info_opt] pervasively
	* odoc_generator_batlib.ml: [add_renamed_module] now caches informations
	* odoc_generator_batlib.ml: [#generate] now correctly puts values names into [known_values_names]

	
09/05/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_Baselib_Pervasives.mli: headers removed, channel operations hidden
	* batlib_Baselib_Array.ml*: removed
	* batlib_Baselib_String.ml*: removed
	* batlib_Baselib_List.ml*: removed
	* batlib_Extlib_Array.mli: documented
	* batlib_Baselib_*.mli: added [@replace]
	* batlib_Extlib_*.mli: added [@replace]
	* juice/godi: removed
	* juice/_tags: removed references to GODI
	* batlib_toolchain.ml: removed references to GODI
	* odoc_generator_batlib.ml: added [known_*]
	* odoc_generator_batlib.ml: added [is_*]
	* odoc_generator_batlib.ml: added [what_is]
	* odoc_generator_batlib.ml: [get_manual_replacement] now uses strings "document"
	* odoc_generator_batlib.ml: [make_link], [has_parent] added
	* odoc_generator_batlib.ml: all links now generated with [make_link]
	* odoc_generator_batlib.ml: [generate_elements_index] now creates html lists
	* odoc_generator_batlib.ml: [generate_modules_index] now sorts module list using [has_parent]
	* odoc_generator_batlib.ml: [html_of_Module_list] now sorts module list using [has_parent]
	* odoc_generator_batlib.ml: [html_of_Index_list] adds button "Home"
	* odoc_generator_batlib.ml: [html_of_Ref] now guesses types using [what_is]
	* odoc_generator_batlib.ml: [generate] now initialises [know_*]
	* odoc_generator_batlib.ml: [index_prefix] now is "root"
	* odoc_generator_batlib.ml: [generate_index] now generates frames